Squashed commit of the following:
commit 4adadd96f9cb47d94083881ff76ab32b226018ae
Author: Friedrich Volz <friedrich.volz@iosb.fraunhofer.de>
Date:   Thu Nov 20 18:50:30 2025 +0100

    url match submodel requests more closely, change docs

commit 94b14b91ed9aaaa410848925bc972c4b0ffd9ac9
Author: Friedrich Volz <friedrich.volz@iosb.fraunhofer.de>
Date:   Thu Nov 20 18:14:52 2025 +0100

    refactor into method

commit a2e54cbb8b35b54fd32018568c346144ce1c16e7
Author: Friedrich Volz <friedrich.volz@iosb.fraunhofer.de>
Date:   Thu Nov 20 17:27:20 2025 +0100

    add semanticID matching to /submodel/{submodelId}

commit c31fbb36a9701f30ddc21be3b2882bfacd04fa8d
Author: Friedrich Volz <friedrich.volz@iosb.fraunhofer.de>
Date:   Thu Nov 20 16:47:38 2025 +0100

    add semantic id filter to /submodels